Add functionality for updating user
