# routes/users.js
@@ -13,10 +13,10 @@ const MailListController = require('../controllers/mailListController');
 router.options('*', MailListController.preflight); 
 
 router.get('/', Authentication.authenticate("admin"), UsersController.get);
-router.get('/:username', Authentication.authenticate("user"), UsersController.getByUsername);
-
 router.post('/', UsersController.create);
 
+router.get('/:username', Authentication.authenticate("user"), UsersController.getByUsername);
+router.patch('/:username', Authentication.authenticate("user"), UsersController.update);
 router.delete('/:username', Authentication.authenticate("admin"), UsersController.delete);
 
 module.exports = router;
